# dce

./: .foo.dot  .gitignore  CMakeLists.txt  LICENSE  README.md  run.sh
benchmarks/: test1.bc  test1.c  test1.dce.rbc  test1.ll  test1.rbc  test1.sol.ll  test1.sol.rbc  test1.vssa.ll  test1.vssa.rbc  test10.bc  test10.c  test10.ll  test10.sol.ll  test10.vssa.ll  test11.bc  test11.c  test11.ll  test11.sol.ll  test11.vssa.ll  test12.bc  test12.c  test12.ll  test12.vssa.ll  test13.c  test14.c  test15.c  test16.c  test2.bc  test2.c  test2.ll  test2.sol.ll  test2.sol.rbc  test2.vssa.ll  test200.c  test3.bc  test3.c  test3.dce.rbc  test3.ll  test3.rbc  test3.sol.ll  (+32 more)
include/: DeadCodeElimination.h  RangeAnalysis.h  vSSA.h
lib/: DeadCodeElimination.cpp  RangeAnalysis.cpp  test10.c  vSSA.cpp
